# trayicons

./: .gitignore  README.md  pyproject.toml
tests/: config_test.py  demo.kra  demo2.kra  icons.toml
trayicons/: __main__.py  config.py  find_krita.py  main.py  tray_icons.py  watchdog.py  win_tray.py
trayicons_go/: config.go  config_test.go  go.mod  go.sum  tray.go
