[project]
name = "trayicons"
version = "2025.5.12.1"
description = "Preview your tray icons made easy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pywin32>=310",
    "sodatools>=2025.2.16.0",
    "toml>=0.10.2",
    "watchdog>=6.0.0",
]

[project.urls]
Repository = "https://github.com/soda92/trayicons"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
packages = ["trayicons"]
exclude = ["__pycache__", "*.pyc", "*.exe"]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["trayicons"]
exclude = ["__pycache__", "*.pyc"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[project.scripts]
trayicons = "trayicons.main:main"
